--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,12 @@
-<h1>Smarter Entsorgungskalender f&uuml;r Wetzikon</h1>
+<head>
+    <link type="image/x-icon" rel="shortcut icon" href="https://www.wetzikon.ch/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
 
-<a href="demo" target="_blank"><h2>Demo</h2></a>
+    <h1>Smarter Entsorgungskalender f&uuml;r Wetzikon</h1>
 
-<a href="form.htm" target="_blank"><h2>Pers&ouml;nlicher Kalender generieren lassen</h2></a>
+    <a href="form.php" target="_blank"><h2>Pers&ouml;nlicher Kalender generieren lassen</h2></a>
+
+    <a href="demo" target="_blank"><h2>Demos</h2></a>
+</body>
