--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,5 @@
 <head>
+    <title>Smarter Entsorgungskalender f&uuml;r Wetzikon</title>
     <link type="image/x-icon" rel="shortcut icon" href="https://www.wetzikon.ch/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
