--- a/demo/index.htm
+++ b/demo/index.htm
@@ -20,4 +20,7 @@
         </td>
     <tr>
     </table>
+    <hr>
+    <p>Copyright &copy; 2022 by <a href=mailto:george@ruinelli.ch?subject=Entsorgungskalender>George Ruinelli</a><br>
+    Visualisierung &copy; by <a href=https://github.com/niccokunzmann/open-web-calendar target=_blank>open-web-calendar</a>.</p>
 </body>
