--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <head>
-    <title>Smarter Entsorgungskalender f&uuml;r Wetzikon</title>
+    <meta http-equiv="refresh" content="0; url=form.php" />
     <link type="image/x-icon" rel="shortcut icon" href="https://www.wetzikon.ch/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
@@ -10,4 +10,6 @@
     <a href="form.php" target="_blank"><h2>Pers&ouml;nlicher Kalender generieren lassen</h2></a>
 
     <a href="demo" target="_blank"><h2>Demos</h2></a>
+    <hr>
+    <p>Copyright &copy; 2022 by <a href=mailto:george@ruinelli.ch?subject=Entsorgungskalender>George Ruinelli</a></p>
 </body>
