--- a/demo/index.htm
+++ b/demo/index.htm
@@ -6,17 +6,17 @@
     <h1>Smarter Entsorgungskalender f&uuml;r Wetzikon - Demos</h1>
     <p>Beispiele von abonnierten Kalendern</p>
 
-    <!-- Visualizer: https://open-web-calendar.herokuapp.com/ -->
+    <!-- Visualizer: https://open-web-calendar.hosted.quelltext.eu/ -->
 
     <table width=100%>
     <tr>
         <td width=50%>
             <h2>Kreis 1, alle Kategorien</h2>
-            <iframe  scrolling="no" frameborder="0" height="600px" width="90%" src="https://open-web-calendar.herokuapp.com/calendar.html?specification_url=https://smarter-entsorgungskalender-wetzikon.ruinelli.ch/demo/kreis1_all.json"></iframe>
+            <iframe  scrolling="no" frameborder="0" height="600px" width="90%" src="https://open-web-calendar.hosted.quelltext.eu/calendar.html?specification_url=https://smarter-entsorgungskalender-wetzikon.ruinelli.ch/demo/kreis1_all.json"></iframe>
         </td>
         <td width=50%>
             <h2>Kreis 3, nur Papiersammlung und Karton</h2>
-            <iframe  scrolling="no" frameborder="0" height="600px" width="90%" src="https://open-web-calendar.herokuapp.com/calendar.html?specification_url=https://smarter-entsorgungskalender-wetzikon.ruinelli.ch/demo/kreis3_papier_karton.json">
+            <iframe  scrolling="no" frameborder="0" height="600px" width="90%" src="https://open-web-calendar.hosted.quelltext.eu/calendar.html?specification_url=https://smarter-entsorgungskalender-wetzikon.ruinelli.ch/demo/kreis3_papier_karton.json">
         </td>
     <tr>
     </table>
